AquaticAlchemy/force-app/main/default/objects/Class__c/fields/Class_Image__c.field-meta.xml
<CustomField>
    <fullName>Class_Image__c</fullName>
    <label>Class Image</label>
    <type>Url</type>
</CustomField>