AquaticAlchemy/force-app/main/default/objects/Class__c/fields/Class_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Class_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Instructor</label>
    <referenceTo>Class_Instructor__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>