AquaticAlchemy/force-app/main/default/objects/Class__c/fields/Instr_nombre__c.field-meta.xml
<CustomField>
    <fullName>Instr_nombre__c</fullName>
    <label>Instr nombre</label>
    <type>TextArea</type>
</CustomField>