AquaticAlchemy/force-app/main/default/objects/Class__c/fields/isSummerCamp__c.field-meta.xml
<CustomField>
    <fullName>isSummerCamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSummerCamp</label>
    <type>Checkbox</type>
</CustomField>