AquaticAlchemy/force-app/main/default/objects/Class__c/fields/product_nombre__c.field-meta.xml
<CustomField>
    <fullName>product_nombre__c</fullName>
    <label>product nombre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>